--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.afollestad:material-dialogs:0.7.6.0'
